[package]
name = "bughouse"
version = "0.0.3"
authors = ["John Watson <jrwats@gmail.com>"]
edition = "2018"
description = "This is a bughouse (2v2 Chess) library for tracking game state and validating legal moves"

homepage = "https://github.com/jrwats/bughouse"
repository = "https://github.com/jrwats/bughouse"
readme = "README.md"
keywords = ["bughouse", "chess", "move", "generator"]
license = "MIT"

[dependencies]
chess = "3.2.0"
lazy_static = "1.4.0"
